--- a/client/index.html
+++ b/client/index.html
@@ -9,10 +9,11 @@
   <title>Karmangulpify</title>
 
   <link rel="stylesheet" href="css/bootstrap.css" />
-  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body ng-app="SampleApp">
 <div ng-view></div>
+<script src="js/vendor.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
