--- a/client/index.html
+++ b/client/index.html
@@ -8,8 +8,9 @@
   <meta name="author" content="">
   <title>Karmangulpify</title>
 
-  <link rel="stylesheet" href="css/bootstrap.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body ng-app="SampleApp">
 <div ng-view></div>
