--- a/client/index.html
+++ b/client/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Karmangulpify</title>
+  <title>Super Social Network Crossover</title>
 
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 </head>
-<body ng-app="SampleApp">
+<body ng-app="SocialCrossover">
 <div ng-view></div>
 <script src="js/vendor.js"></script>
 <script src="js/main.js"></script>
